asegurarnos de que las instancias de VirusActor se devuelven al fondo cuando
se eliminan los virus, se sobreescribe remove() para primero liberar el
objeto.

Finalmente, se añade código en GameScreen para iniciar la partida cargada con
tres virus en posiciones predefinidas, y se establece un número de mascarillas
para el PlayerActor. Este fragmento de código solo existirá temporalmente para
hacer pruebas.

Actualmente hay algunos bugs con la gestión de los virus que serán corregidos
en los próximos commits. Concretamente:
- Parece ser posible que un virus infecte dos veces al PlayerActor. Posiblemente
  sea porque tanto el PlayerActor como el propio Virus gestionan estas colisiones.
- Cuando dos virus chocan entre sí, solo uno de los dos debe desaparecer. Sin
  embargo, actualmente se eliminan los dos.


Cambios presentados el 2021/01/25 (2)
-------------------------------------
Se corrige el bug que provocaba que la colisión con un virus contabilizase
múltiples veces. Se debía a que CollisionPool.reset no restauraba el valor
de player a null, lo que hacía que, tras entrar un virus en colisión con el
PlayerActor, este evento también fuera reportado falsamente en las futuras
llamadas a init().


Cambios presentados el 2021/01/25 (3)
-------------------------------------
Se cambia el movimiento de los virus para ser mucho menos caótico, aunque sigue
(y seguirá) siendo aleatorio. También se cambia cómo responden cuando chocan con
otro virus; simplemente cambian de dirección.


Cambios presentados el 2021/01/25
---------------------------------
Se empieza a utilizar StretchViewport en vez de ExtendViewport para corregir
un bug en el que se mostraban regiones fuera de límites en algunos dispositivos.

También se elimina el número máximo de virus que pueden existir en un mapa.

Se introducen los siguientes cambios, sujetos a volver a cambiar en el futuro:
- No existe actualmente un zoom máximo.
- El nivel de demostración es más complejo.