@@ -101,7 +101,7 @@ Se cambia el movimiento de los virus para ser mucho menos caótico, aunque sigue
 otro virus; simplemente cambian de dirección.
 
 
-Cambios presentados el 2021/01/25
+Cambios presentados el 2021/01/28
 ---------------------------------
 Se empieza a utilizar StretchViewport en vez de ExtendViewport para corregir
 un bug en el que se mostraban regiones fuera de límites en algunos dispositivos.
@@ -111,3 +111,8 @@ También se elimina el número máximo de virus que pueden existir en un mapa.
 Se introducen los siguientes cambios, sujetos a volver a cambiar en el futuro:
 - No existe actualmente un zoom máximo.
 - El nivel de demostración es más complejo.
+
+
+Cambios presentados el 2021/01/28 (2)
+-------------------------------------
+Se añaden las mascarillas como actor.
